show whitespace in raw markdown for browsers without js turned on. fixes #1

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1186,6 +1186,7 @@ ul.site li a {
 ---------------------------------------------*/
 
 .post-content {
+  white-space: pre;
   background: #fff;
   padding: 50px 100px;
   font-family: 'OpenSans', sans-serif;
